# core-infra

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: terraform-all.yml  terraform-aws.yml  terraform-github.yml
terraform/: build-prod.sh
terraform/aws/: backend.tf  build-prod.sh  providers.tf  resources.tf  terraform.tfvars.example  variables.tf
terraform/github/: backend.tf  environments.tf  locals.tf  organization.tf  providers.tf  repositories.tf  repositories.yaml  resources.tf  teams.tf  terraform.tfvars.example  variables.tf
terraform/github/files_templates/: CODEOWNERS_template  README_template
wiki/: AWS-Module.md  Adding-a-Repository.md  GitHub-Module.md  Home.md  State-Management.md
