[project]
name = "general-infra"
version = "0.0.1"
description = "General infrastructure code for the Investments Assistant."
authors = [
    { name = "lupirex", email = "investments.assistant.27@gmail.com" }
]
license = {text = "AGPL-3.0-or-later"}
keywords = [ "Terraform", "IaC" ]
readme = "README.md"
dependencies = [
    "pre-commit (>=4.5.1)"
]

[project.urls]
repository = "https://github.com/Investments-Assistant/general-infra"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
